# gl-g1-cpp

./: CMakeLists.txt  main.cpp
assets/shaders/: fragment.shader  vertex.shader
include/: test.h
src/: Shader.cpp  main.cpp  test.cpp
